ci: Install required dependencies in test workflow
Update the GitHub Actions workflow to install 'file' and 'coreutils' packages, ensuring the test environment has all necessary tools for running Bats tests accurately.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,12 @@ jobs:
         id: setup-bats
         uses: bats-core/bats-action@3.0.1
 
+      - name: Install dependencies
+        shell: bash
+        run: |
+          apt-get update -qq
+          apt-get install -y -qq file coreutils
+
       - name: Run tests
         shell: bash
         env:
