--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          apt-get update -qq
-          apt-get install -y -qq file coreutils
+          sudo apt-get update -qq
+          sudo apt-get install -y -qq file coreutils
 
       - name: Run tests
         shell: bash
