--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,23 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -y -qq file coreutils
 
+      - name: Debug - check script and dependencies
+        shell: bash
+        run: |
+          echo "=== file command ==="
+          which file
+          file --version | head -1
+          echo ""
+          echo "=== Script check_dependencies ==="
+          bash -c 'source clipboard-code.sh; echo "Dependencies check passed"'
+          echo ""
+          echo "=== Test script execution ==="
+          TEST_DIR=$(mktemp -d)
+          mkdir -p "$TEST_DIR/src"
+          echo "test" > "$TEST_DIR/src/app.js"
+          bash clipboard-code.sh -r "$TEST_DIR"
+          rm -rf "$TEST_DIR"
+
       - name: Run tests
         shell: bash
         env:
